Modified the microservices workflow to use DIFC APIs and grant and request capabilities on tags